chore: status check in workflow
