# api/v1alpha1/statuscheck_types.go
@@ -228,3 +228,13 @@ type StatusCheckList struct {
 	metav1.ListMeta `json:"metadata,omitempty"`
 	Items           []StatusCheck `json:"items"`
 }
+
+func (in *StatusCheck) IsCompleted() bool {
+	for _, condition := range in.Status.Conditions {
+		if condition.Type == StatusCheckConditionCompleted &&
+			condition.Status == corev1.ConditionTrue {
+			return true
+		}
+	}
+	return false
+}
