# pkg/dashboard/swaggerdocs/swagger.json
@@ -4616,6 +4616,10 @@
         "v1alpha1.Template": {
             "type": "object",
             "properties": {
+                "abort": {
+                    "description": "Abort describe whether to abort the workflow when the failure threshold of StatusCheck is exceeded. Only used when Type is TypeStatusCheck.\n+optional",
+                    "type": "boolean"
+                },
                 "awsChaos": {
                     "description": "+optional",
                     "type": "object",
@@ -4702,7 +4706,7 @@
                     "type": "object",
                     "$ref": "#/definitions/v1alpha1.ChaosOnlyScheduleSpec"
                 },
-                "statuscheck": {
+                "statusCheck": {
                     "description": "StatusCheck describe the behavior of StatusCheck. Only used when Type is TypeStatusCheck.\n+optional",
                     "type": "object",
                     "$ref": "#/definitions/v1alpha1.StatusCheckSpec"
